--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
+alembic==1.4.0
 Click==7.0
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-JWT==0.3.2
 flask-marshmallow==0.10.1
+Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
 itsdangerous==1.1.0
 Jinja2==2.10.3
+Mako==1.1.1
 MarkupSafe==1.1.1
 marshmallow==3.3.0
 marshmallow-sqlalchemy==0.21.0
 pkg-resources==0.0.0
 PyJWT==1.4.2
+python-dateutil==2.8.1
+python-editor==1.0.4
 six==1.14.0
 SQLAlchemy==1.3.13
 Werkzeug==0.16.0
