--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 alembic==1.4.0
+certifi==2019.11.28
+chardet==3.0.4
 Click==7.0
 Flask==1.1.1
 Flask-Cors==3.0.8
@@ -6,6 +8,7 @@ Flask-JWT==0.3.2
 flask-marshmallow==0.10.1
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
 Mako==1.1.1
@@ -15,6 +18,8 @@ marshmallow-sqlalchemy==0.21.0
 PyJWT==1.4.2
 python-dateutil==2.8.1
 python-editor==1.0.4
+requests==2.22.0
 six==1.14.0
 SQLAlchemy==1.3.13
+urllib3==1.25.8
 Werkzeug==0.16.0
